--- a/components/synedit/languages/synmacrorecorder.ua.po
+++ b/components/synedit/languages/synmacrorecorder.ua.po
@@ -1,16 +1,16 @@
 #: synmacrorecorder:scannotpause
 msgid "Can only pause when recording"
-msgstr "Можу лише призупинись, коли записую"
+msgstr "Можу лише призупинитись, коли записую"
 
 #: synmacrorecorder:scannotresume
 msgid "Can only resume when paused"
-msgstr "Можу лише продовжити, якщо зупинений"
+msgstr "Можу лише продовжити, якщо зупинено"
 
 #: synmacrorecorder:scannotplay
 msgid "Cannot playback macro when recording"
-msgstr "Не можу відкотити макрос, коли записую"
+msgstr "Не можу скасувати макрос, під час запису"
 
 #: synmacrorecorder:scannotrecord
 msgid "Cannot record macro when recording"
-msgstr "Не можу писати макрос, коли записую"
+msgstr "Не можу писати макрос, під час запису"
 
