--- a/examples/turbopower_ipro/readme
+++ b/examples/turbopower_ipro/readme
@@ -8,19 +8,31 @@ this test follow this steps:
 2. [OPTIONAL RECOMMENDED] To add jpeg picture format support,
    Install package JpegForLazarus.lpk
    located in directory $LazarusDir/components/jpeg.
-
-3. Open test project tpiproexample.lpi
-
-4. [OPTIONAL] if step 2 is done:
-
-   4a.	Add JpegForLazarus package requeriment to the sample
-        [menu]->Project->Project Inspector->Add->New Requirement
-
-	and then select from the Package name list JPEGForLazarus
    
-   4b.  Uncomment the line LazJpeg, in the uses clause of the
-        main unit
+3. [OPTIONAL] To add print preview support to project sample
+   install package Printer4Lazarus.lpk
+   located in directory $LazarusDir/components/printers
 
-5. Run
+4. Open test project tpiproexample.lpi
+
+5. [OPTIONAL] if step 2 is done then do:
+
+   5a.	Add JpegForLazarus package requeriment to the sample
+        [menu]->Project->Project Inspector->Add->New Requirement
+        and then select "JPEGForLazarus" from the Package name list.
+        
+   5b.	Enable this feature by editing compiler define at top of main
+        unit from {.$define UseJPEG} to {$define UseJPEG}.
+        
+6. [OPTIONAL] if step 2 is done then do:
+
+   6a.	Add Printer4Lazarus package requeriment to the sample
+        [menu]->Project->Project Inspector->Add->New Requirement
+        and then select "Printer4Lazarus" from the Package name list.
+        
+   6b.	Enable this feature by editing compiler define at top of main
+        unit from {.$define UsePreview} to {$define UsePreview}.
+
+7. Run
    
 
