Updated po files
 SVN 8341@trunk

--- a/languages/objinspstrconsts.ca.po
+++ b/languages/objinspstrconsts.ca.po
@@ -167,8 +167,8 @@ msgid "All"
 msgstr "Tot"
 
 #: objinspstrconsts:oisallfiles
-msgid "All files (*.*)|*.*"
-msgstr "Tots els fitxers (*.*)|*.*"
+msgid "All files"
+msgstr ""
 
 #: objinspstrconsts:oisarray
 msgid "Array"
