--- a/languages/objinspstrconsts.de.po
+++ b/languages/objinspstrconsts.de.po
@@ -178,8 +178,8 @@ msgid "All"
 msgstr "Alle"
 
 #: objinspstrconsts:oisallfiles
-msgid "All files (*.*)|*.*"
-msgstr "Alle Dateien (*.*)|*.*"
+msgid "All files"
+msgstr ""
 
 #: objinspstrconsts:oisarray
 msgid "Array"
