--- a/languages/objinspstrconsts.fr.po
+++ b/languages/objinspstrconsts.fr.po
@@ -167,8 +167,8 @@ msgid "All"
 msgstr "Tous"
 
 #: objinspstrconsts:oisallfiles
-msgid "All files (*.*)|*.*"
-msgstr "Tous les fichiers (*.*)|*.*"
+msgid "All files"
+msgstr ""
 
 #: objinspstrconsts:oisarray
 msgid "Array"
