--- a/languages/objinspstrconsts.it.po
+++ b/languages/objinspstrconsts.it.po
@@ -177,8 +177,8 @@ msgid "All"
 msgstr "Tutto"
 
 #: objinspstrconsts:oisallfiles
-msgid "All files (*.*)|*.*"
-msgstr "Tutti i file (*.*)|*.*"
+msgid "All files"
+msgstr ""
 
 #: objinspstrconsts:oisarray
 msgid "Array"
