--- a/languages/objinspstrconsts.pl.po
+++ b/languages/objinspstrconsts.pl.po
@@ -178,7 +178,7 @@ msgid "All"
 msgstr "Wszystkie"
 
 #: objinspstrconsts:oisallfiles
-msgid "All files (*.*)|*.*"
+msgid "All files"
 msgstr ""
 
 #: objinspstrconsts:oisarray
