--- a/languages/objinspstrconsts.ua.po
+++ b/languages/objinspstrconsts.ua.po
@@ -167,8 +167,8 @@ msgid "All"
 msgstr "Все"
 
 #: objinspstrconsts:oisallfiles
-msgid "All files (*.*)|*.*"
-msgstr "Всі файли (*.*)|*.*"
+msgid "All files"
+msgstr ""
 
 #: objinspstrconsts:oisarray
 msgid "Array"
